History api routing in playground

--- a/examples/playground/src/wasmJsMain/resources/index.html
+++ b/examples/playground/src/wasmJsMain/resources/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kilua demo</title>
+    <base href="/">
     <script src="main.bundle.js"></script>
 </head>
 <body>
